# ml_journey

./: .gitignore  data.sqlite  internal_deps.py  main.py  pyproject.toml  train.py
data/: fetch.py  hist_data.csv
features/: engineering.py
