[project]
name = "ml-journey"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.4"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi[standard]>=0.135.3",
    "joblib>=1.5.3",
    "pandas>=3.0.2",
    "pydantic>=2.13.0",
    "scikit-learn>=1.8.0",
    "sqlalchemy>=2.0.49",
    "yfinance>=1.3.0",
]
